# cqrs-ddd

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_OLD.md  cspell.json  noxfile.py  pyproject.toml  system-prompt.md
.gemini/: styleguide.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cqrs-ddd-core/: README.md  system-prompt.md
tests/architecture/: test_boundaries.py  test_phase1_boundaries.py
