[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqrs-ddd-toolkit"
version = "0.1.0"
description = "A modular, enterprise-grade CQRS/DDD toolkit for Python"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Myron Gourlis", email = "myrgourlis@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.5.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
# Group 1: The Foundation
core = []
persistence-sqlalchemy = ["sqlalchemy[asyncio]>=2.0.0", "asyncpg>=0.29.0"]
advanced-core = []

# Group 2: Data & Scale
persistence-mongo = ["motor>=3.3.0"]
persistence-redis = ["redlock-ng>=1.0.1", "redis>=5.0.0"]
projections = []

# Group 3: Security & Isolation
identity = [
    "joserfc>=1.6.2",
    "pyotp>=2.9",
    "bcrypt>=4.0",
]
identity-keycloak = ["python-keycloak>=3.0"]
identity-ldap = ["python-ldap>=3.4"]
identity-fastapi = ["fastapi>=0.100", "starlette>=0.27"]
access-control = []
multitenancy = []

# Group 4: Infrastructure Abstractions
file-storage-s3 = ["boto3>=1.34.0"]
file-storage-azure = ["azure-storage-blob>=12.19.0"]
# Messaging (cqrs-ddd-messaging package extras)
messaging-rabbitmq = ["aio-pika>=9.3.0"]
messaging-kafka = ["aiokafka>=0.10.0"]
messaging-sqs = ["aiobotocore>=2.9.0"]
observability = ["opentelemetry-api>=1.22.0", "opentelemetry-sdk>=1.22.0", "prometheus-client", "sentry-sdk"]
health = ["sqlalchemy[asyncio]>=2.0.0", "redis>=5.0.0"]
# Notifications (cqrs-ddd-notifications package extras)
notifications = []
notifications-smtp = ["cqrs-ddd-notifications[smtp]"]
notifications-http = ["cqrs-ddd-notifications[http]"]
notifications-aws = ["cqrs-ddd-notifications[aws]"]
notifications-jinja2 = ["cqrs-ddd-notifications[jinja2]"]
notifications-twilio = ["cqrs-ddd-notifications[twilio]"]
notifications-all = ["cqrs-ddd-notifications[all]"]

# Geometry support (for in-memory and SQLAlchemy operators)
geometry = [
    "geojson-pydantic>=1.0",
    "shapely>=2.0",
    "geoalchemy2>=0.14.0",
    "pyproj>=3.0",
    "pydantic-shapely>=1.0a6",
]

# Development: tooling + all optional deps so .[dev] runs full test suite
dev = [
    # Tooling
    "ruff>=0.1.11",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-archon>=0.0.6",
    "httpx>=0.26.0",
    "polyfactory>=2.14.0",
    "dirty-equals>=0.7.1",
    "hypothesis>=6.92.0",
    "complexipy>=0.5.0",
    "vulture>=2.10",
    "nox>=2023.4.22",
    # Test / integration
    "aiosqlite>=0.19.0",
    "types-redis>=4.0.0",
    "testcontainers>=4.0.0",
    "pika>=1.3.0",
    "mongomock-motor>=0.0.0",
    "requests>=2.31.0",
    # persistence-sqlalchemy
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    # persistence-mongo
    "motor>=3.3.0",
    # persistence-redis
    "redlock-ng>=1.0.1",
    "redis>=5.0.0",
    # identity
    "joserfc>=1.6.2",
    "pyotp>=2.9",
    "bcrypt>=4.0",
    "argon2-cffi>=23.0",
    # identity-keycloak
    "python-keycloak>=3.0",
    # identity-ldap omitted: requires system OpenLDAP dev headers (e.g. apt install libldap2-dev); use .[identity-ldap] if needed
    # identity-fastapi
    "fastapi>=0.100",
    "starlette>=0.27",
    # file-storage
    "boto3>=1.34.0",
    "azure-storage-blob>=12.19.0",
    # messaging
    "aio-pika>=9.3.0",
    "aiokafka>=0.10.0",
    "aiobotocore>=2.9.0",
    # observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    # notifications
    "aiosmtplib>=3.0.0",
    "Jinja2>=3.1.0",
    "twilio>=9.0.0",
    "prometheus-client",
    "sentry-sdk",
    # geometry
    "geojson-pydantic>=1.0",
    "shapely>=2.0",
    "geoalchemy2>=0.14.0",
    "pyproj>=3.0",
    "pydantic-shapely>=1.0a6",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["packages/core/src", "packages/persistence/sqlalchemy/src", "packages/persistence/mongo/src", "packages/infrastructure/redis/src", "packages/infrastructure/messaging/src", "packages/infrastructure/observability/src", "packages/infrastructure/health/src", "packages/infrastructure/notifications/src", "packages/advanced/src", "packages/specifications/src", "packages/features/filtering/src", "packages/features/identity/src", "packages/engines/projections/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "TCH", # flake8-type-checking
    "PT",  # flake8-pytest-style
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "PIE", # flake8-pie
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (dead code)
]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are allowed
    "COM812", # Missing trailing comma (handled by formatter)
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "FBT003", # Boolean positional value in function call
    "S101",   # Use of assert (standard in pytest)
    "A003",   # Class attribute shadowing builtin (e.g. id)
    "S110",   # try-except-pass with logging is acceptable
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN", "ARG", "S101", "ERA001", "A002", "N806", "E501", "E402", "PT011", "F401", "S105", "S106", "S608", "BLE001", "B017"]
"**/*_tests/**" = ["ANN", "ARG", "S101", "ERA001", "A002", "N806", "E501", "E402", "PT011", "F401", "S105", "S106", "S608", "BLE001", "B017"]

[tool.ruff.lint.isort]
known-first-party = [
    "cqrs_ddd_core",
    "cqrs_ddd_advanced_core",
    "cqrs_ddd_specifications",
    "cqrs_ddd_persistence_sqlalchemy",
    "cqrs_ddd_persistence_mongo",
    "cqrs_ddd_redis",
    "cqrs_ddd_messaging",
    "cqrs_ddd_observability",
    "cqrs_ddd_health",
    "cqrs_ddd_notifications",
    "cqrs_ddd_filtering",
    "cqrs_ddd_identity",
    "cqrs_ddd_projections",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
explicit_package_bases = false
namespace_packages = false
exclude = ["(?x)(^|/)(tests|mongo_tests|messaging_tests|health_tests|identity_tests|notifications_tests)/", "(^|/)build/"]
mypy_path = "packages/core/src:packages/advanced/src:packages/persistence/sqlalchemy/src:packages/persistence/mongo/src:packages/infrastructure/redis/src:packages/infrastructure/messaging/src:packages/infrastructure/observability/src:packages/infrastructure/health/src:packages/infrastructure/notifications/src:packages/specifications/src:packages/features/filtering/src:packages/features/identity/src:packages/engines/projections/src"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "mongo_tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "messaging_tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "health_tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "identity_tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "notifications_tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "noxfile"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "cqrs_ddd_persistence_sqlalchemy.types.spatialite"
disallow_untyped_calls = false

[tool.pyright]
include = [
    "packages/core/src",
    "packages/persistence/sqlalchemy/src",
    "packages/persistence/mongo/src",
    "packages/infrastructure/redis/src",
    "packages/infrastructure/messaging/src",
    "packages/infrastructure/observability/src",
    "packages/infrastructure/health/src",
    "packages/infrastructure/notifications/src",
    "packages/advanced/src",
    "packages/specifications/src",
    "packages/features/filtering/src",
    "packages/features/identity/src",
    "packages/engines/projections/src",
    "tests"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".nox"
]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.*",
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning:testcontainers.*",
    "ignore:model_to_doc is deprecated:DeprecationWarning:.*",
    "ignore:model_from_doc is deprecated:DeprecationWarning:.*",
    "ignore:coroutine .* was never awaited:RuntimeWarning:.*",
]
testpaths = [
    "packages/core/tests",
    "packages/persistence/sqlalchemy/tests",
    "packages/infrastructure/redis/tests",
    "packages/infrastructure/messaging/messaging_tests",
    "packages/infrastructure/observability/tests",
    "packages/infrastructure/health/health_tests",
    "packages/infrastructure/notifications/notifications_tests",
    "packages/advanced/tests",
    "packages/specifications/tests",
    "packages/features/identity/identity_tests",
    "packages/engines/projections/tests",
    "packages/persistence/mongo/mongo_tests",
    "tests",
]
python_files = ["test_*.py"]
addopts = "--strict-markers --import-mode=importlib --cov=. --cov-report=term-missing"

[tool.coverage.run]
source = [
    "packages/core/src/cqrs_ddd_core",
    "packages/persistence/sqlalchemy/src/cqrs_ddd_persistence_sqlalchemy",
    "packages/infrastructure/redis/src/cqrs_ddd_redis",
    "packages/infrastructure/messaging/src/cqrs_ddd_messaging",
    "packages/infrastructure/observability/src/cqrs_ddd_observability",
    "packages/infrastructure/health/src/cqrs_ddd_health",
    "packages/infrastructure/notifications/src/cqrs_ddd_notifications",
    "packages/advanced/src/cqrs_ddd_advanced_core",
    "packages/specifications/src/cqrs_ddd_specifications",
    "packages/features/identity/src/cqrs_ddd_identity",
    "packages/engines/projections/src/cqrs_ddd_projections",
]
omit = [
    "**/tests/*",
    "**/*_tests/*",
    "**/__init__.py",
    "noxfile.py",
    "setup.py",
    # Integration-only: Keycloak HTTP client and admin (require live server)
    #"**/identity/**/oauth2/keycloak.py",
    #"**/identity/**/admin/keycloak.py",
    # Optional observability SDKs (OTEL/Sentry) – exercised via integration
    #"**/identity/**/observability/metrics.py",
    #"**/identity/**/observability/tracing.py",
    #"**/observability/**/tracing.py",
    #"**/observability/**/metrics.py",
    #"**/observability/**/sentry.py",
    #"**/observability/**/payload_tracing.py",
    #"**/observability/**/hooks.py",
    #"**/observability/**/context.py",
    # Platform-specific / compatibility
    #"**/persistence/sqlalchemy/**/compat.py",
    #"**/persistence/sqlalchemy/**/types/spatialite.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):",
]
show_missing = true
fail_under = 85
